src/test/deca/syntax/valid/non_provided/op_plus.deca
// Description:
//    Programme minimaliste avec declaration et affectation
//    ainsi qu'une opération arithmétique
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 11/01/2020

{
    int a;
    a = 3 + 2;
}