src/test/deca/syntax/invalid/non_provided/bad_decl.deca
// Description:
//    Programme minimaliste avec erreur avec mauvaise affectation
//    Manque du ';'
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 11/01/2020

{
    int a = 27
}